crates/edgedb_codegen/tests/compile/macros/missing_file.rs
use edgedb_codegen::edgedb_query;

fn main() {
	edgedb_query!(example_module);
}
